small change mobile about ius section too narrow fix

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -185,6 +185,9 @@
     bottom: 10vh !important;
   }
 
+  .services {
+    width: 100%;
+  }
   
 
   .home-work {
